// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager push csp "frodo config-manager push csp --name report-only --directory test/e2e/exports/fr-config-manager/cloud ": should import the 'report-only' CSP into cloud" 1`] = `""`;

exports[`frodo config-manager push csp "frodo config-manager push csp --name report-only --directory test/e2e/exports/fr-config-manager/cloud ": should import the 'report-only' CSP into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push csp'. This feature may change without notice.
"
`;

exports[`frodo config-manager push csp "frodo config-manager push csp --name test-only -D test/e2e/exports/fr-config-manager/cloud ": should fail to import the 'test-only' CSP into cloud" 1`] = `
"Experimental feature in use: 'frodo config-manager push csp'. This feature may change without notice.
Invalid CSP name 'test-only'. Valid values are 'enforced' or 'report-only'.
"
`;

exports[`frodo config-manager push csp "frodo config-manager push csp --name test-only -D test/e2e/exports/fr-config-manager/cloud ": should fail to import the 'test-only' CSP into cloud" 2`] = `1`;

exports[`frodo config-manager push csp "frodo config-manager push csp -D test/e2e/exports/fr-config-manager/cloud ": should import the csp into cloud" 1`] = `""`;

exports[`frodo config-manager push csp "frodo config-manager push csp -D test/e2e/exports/fr-config-manager/cloud ": should import the csp into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push csp'. This feature may change without notice.
"
`;

exports[`frodo config-manager push csp "frodo config-manager push csp -n enforced -D test/e2e/exports/fr-config-manager/cloud ": should import the 'enforced' CSP into cloud" 1`] = `""`;

exports[`frodo config-manager push csp "frodo config-manager push csp -n enforced -D test/e2e/exports/fr-config-manager/cloud ": should import the 'enforced' CSP into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push csp'. This feature may change without notice.
"
`;
